# sorin-sdk

./: README.md
python/: README.md  pyproject.toml
python/sorin/: __init__.py  _context.py  cli.py  client.py  github.py  sorin_llm.py
python/tests/: conftest.py  test_cli.py  test_client.py  test_context_propagation.py  test_mcp_server.py  test_response_header_capture.py  test_thread_isolation.py  test_tool_use_id_kwarg.py
