[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sorin-sdk"
version = "0.1.0"
description = "Python SDK for the Sorin agent authorization and observability platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["sorin"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "responses>=0.23",
]
