[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sorin-sdk"
version = "0.1.4"
description = "Python SDK for Sorin — AI agent governance and security"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "anthropic>=0.20.0",
    "openai>=1.0.0",
    "click>=8.0.0",
]

[project.scripts]
sorin = "sorin.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sorin"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "responses>=0.23",
]
